[package]
name = "kurtosis-blueprint-template"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint Template for running Kurtosis Packages"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/kurtosis-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
structopt = "0.3.26"
tokio = { version = "^1", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }

[dependencies.gadget-sdk]
version = "0.6.2"
default-features = false
features = ["getrandom"]

[build-dependencies]
blueprint-metadata = "0.2.0"
# TODO: Replace with versioned release
blueprint-build-utils = { git = "https://github.com/tangle-network/gadget" }

[features]
default = ["std"]
std = ["gadget-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "kurtosis-blueprint-template"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "kurtosis-blueprint-template"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-kurtosis-blueprint-template-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-kurtosis-blueprint-template-gadget" },
]
